--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4",
     "vue": "^2.6.11",
+    "vuescroll": "^4.16.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
