--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4",
     "vue": "^2.6.11",
+    "vue-inputmask": "^0.2.1",
+    "vue-the-mask": "^0.11.1",
+    "vuelidate": "^0.7.6",
     "vuescroll": "^4.16.1",
     "vuex": "^3.5.1"
   },
